fondo claro y pulido para 3ra entrega final

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header>
         <div class="marca">
             <img class="logo" src="./media/logo.jpg" alt="Logo">
-            <h1 id="top">codigo>_WG </h1>
+            <h1 id="top">C0D1G0>_WG </h1>
         </div>
         <h3 class="eslogan animate__animated animate__flipInX">for work and gaming</h3>
         <section class="redes">
@@ -119,27 +119,27 @@
     <main class="recomendaciones">
         <div class="reco1 wow animate__animated animate__fadeIn">
             <h2>No te apures, primero preguntate para que vas a usar tu hard</h2>
-            <p>Dependiendo de tu actividad deberías pensar si <br> precisas más potencia de cálculo del procesador, más velocidad para jugar o gran almacenamiento para archivar</p>
+            <p>Dependiendo de tu actividad deberías pensar si <br> precisas más potencia de cálculo del procesador, más velocidad para jugar o gran almacenamiento para archivar.</p>
         </div>
         <div class="reco2 wow animate__animated animate__fadeInRight">
-            <h2>No todo lo que brilla es oro</h2>
-            <p>Las empresas se esmeran por decorar de forma excesiva sus productos y así llamar la atencion pero tene en cuenta que siempre la calidad es más importante</p>
+            <h2>Estamos para ayudarte a elegir</h2>
+            <p>Existen ciertas compatibilidades entre dispositivos que se deben respetar, por lo que es vital que nos consultes si vas a instalar partes a un dispositivo ya armado.</p>
         </div>
         <div class="reco3 wow animate__animated animate__fadeInLeft">
             <h2>Informate sobre nuevas alternativas </h2>
-            <p>Tal vez un procesador gráfico integrado cubra tus necesidades ya que en la actualidad tienen la capacidad de soportar exigencias tanto para diseñar como para jugar.</p><br>
+            <p>Tal vez un procesador gráfico integrado cubra tus necesidades ya que en la actualidad tienen la capacidad de soportar exigencias tanto para diseñar como para jugar.</p>
         </div>
         <div class="reco4 wow animate__animated animate__fadeIn">
             <h2>Más caro no siempres es mejor </h2>
-            <p>Dependiendo de tu actividad deberia poner énfasis si precisas más potencia de cálculo del procesador, más velocidad para jugar o gran almacenamiento para archivar</p><br>
+            <p>Dependiendo de tu actividad deberia poner énfasis si precisas más potencia de cálculo del procesador, más velocidad para jugar o gran almacenamiento para archivar.</p>
         </div>
         <div class="reco5 wow animate__animated animate__fadeIn">
-            <h2>Estamos para ayudarte a elegir</h2>
-            <p>Existen ciertas compatibilidades entre dispositivos que se deben respetar, por lo que es vital que nos consultes si vas a instalar partes a un dispositivo ya armado.</p><br>
+            <h2>No todo lo que brilla es oro</h2>
+            <p>Las empresas se esmeran por decorar de forma excesiva sus productos y así llamar la atencion pero tene en cuenta que siempre la calidad es más importante.</p>
         </div>
         <div class="reco6 wow animate__animated animate__fadeInRight">
             <h2>Por último, aprovecha nuestras ofertas! </h2>
-            <p>Siempre tenemos artículos de lanzamiento que se ofrecen por menor valor que su antecesor, asi que veni y aprovechalos!</p><br>
+            <p>Siempre tenemos artículos de lanzamiento que se ofrecen por menor valor que su antecesor, asi que veni y aprovechalos!</p>
         </div>
     </main>
     <h2 class="separador">Te presentamos los "Los más buscados"</h2>
