--- a/pages/gaming.html
+++ b/pages/gaming.html
@@ -171,37 +171,36 @@
     </div>
     <!-- recreo -->
     <h2 class="separador">Lo que tenes que saber!</h2>
-    <div class="recreo">
+    <div class="recreo gamenews">
         <div class="recreo__uno">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/25_RVxLpv8A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <div>
-                <h3>AFA Desarrollo Este viernes 23 y sábado 24 se disputará la clasificatoria sudamericana 😉</h3>
+            <div class="news">
+                <h3  >AFA Desarrollo Este viernes 23 y sábado 24 se disputará la clasificatoria sudamericana 😉</h3>
                 <p> para la mayor competición de selecciones de la FIFAe del mundo. Un total de 60 selecciones participarán en la FIFA eNations Series 2021.</p>
             </div>
         </div>
         <div class="recreo__dos">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/iGoirv2lLMY?start=5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <div>
-                <h3 class="recreo__dos__texto">Competencias Gamers! y sacale el jugo a tu compu 🕹
+            <div class="news">
+                <h3>Competencias Gamers! y sacale el jugo a tu compu 🕹
                 </h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae tempora explicabo repellendus labore quisquam.</p>
+                <p>No solo podes competir  mientras la pasas bien sino que tambien pudes ganar dinero haciendolo.</p>
             </div>
         </div>
         <div class="recreo__uno">
             <iframe width=" 560 " height="315 " src="https://www.youtube.com/embed/I5CMCCOzb4s " title="YouTube video player " frameborder="0 " allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture " allowfullscreen></iframe>
-            <div>
-                <h3>The most incredible Grand Final comeback | Hashtag Tom v Levi de Weerd | PS4 Final | EU Qualifier 3 😉
+            <div class="news">
+                <h3>The most incredible Grand Final comeback 😉
                 </h3>
-                </p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. suscipit ullam expedita.</p>
+                </p>| Hashtag Tom v Levi de Weerd | PS4 Final | EU Qualifier 3</p>
             </div>
         </div>
         <div class="recreo__dos">
-            <iframe class="recreo__dos__video " width="560 " height="315 " src="https://www.youtube.com/embed/iGoirv2lLMY?start=5 " title="YouTube video player " frameborder="0 " allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
-            picture-in-picture " allowfullscreen></iframe>
-            <div>
-                <h3 class="recreo__dos__texto ">Competencias Gamers! y sacale el jugo a tu compu 🕹
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/L6T6RJ3Lh6o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="news">
+                <h3 class="recreo__dos__texto ">Torneo Easy FIFA 21 ¡La gran Final Argentina!
                 </h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae tempora explicabo repellendus labore quisquam.</p>
+                <p>¡Bienvenidas y bienvenidos a la gran final del Torneo Easy FIFA 21 en Argentina! Lorena Miki, Yiyo Garcilazo, Juanma Viera y Nonoloko van a ser los que esta noche te contarán todo sobre los épicos partidos que se vivirán en el estadio virtual. ¡HOY LOS 4 FINALISTAS SE JUGARÁN TODO!</p>
             </div>
         </div>
     </div>
