--- a/pages/software.html
+++ b/pages/software.html
@@ -23,7 +23,7 @@
     <!----- CSS local de estilo propio -->
     <link rel="stylesheet" href="../css/estilo.css">
     <title>Soft >_WG todo el hard y soft que buscas con el mejor asesoramiento</title>
-    <link rel="stylesheet" href="index.html">s
+    <link rel="stylesheet" href="index.html">
 </head>
 
 <body>
