agrego txt de SAO y mejoras de ubicaciones para vista responsive

--- a/pages/hardware.html
+++ b/pages/hardware.html
@@ -30,10 +30,10 @@
     <header>
         <div class="marca">
             <img class="logo" src="../media/logo.jpg" alt="Logo">
-            <h1 id="top">codigo>_WG </h1>
+            <h1 id="top">C0D1G0>_WG</h1>
         </div>
         <h3 class="eslogan animate__animated animate__pulse">for work and gaming</h3>
-        <section class="redes">
+        <div class="redes">
             <div>
                 <a href="https://www.instagram.com/?hl=es-la " target="_blank"><img src="../media/redes/instagram.png" whidth="32px" alt="instagram"></a>
             </div>
@@ -46,7 +46,7 @@
             <div>
                 <a href="https://www.whatsapp.com/" target="_blank"><img src="../media/redes/whatsapp.png" whidth="32px" alt="whatsapp"></a>
             </div>
-        </section>
+        </div>
     </header>
     <!-- carrusel de bootstrap-->
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -104,7 +104,7 @@
                         <a class="nav-link active text-white" aria-current="page" href="../pages/gaming.html">Gaming</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="../pages/contacto.html" target="_blank">Contactenos</a>
+                        <a class="nav-link text-white" href="../pages/contacto.html">Contactenos</a>
                     </li>
                 </ul>
                 <form class="d-flex">
@@ -137,98 +137,100 @@
             <div class="cathard wow animate__animated animate__fadeIn">
                 <p>Gabinete</p>
                 <img src="../media/articulos/gabinete_thermaltake.png" width="200px" alt="gabinete_Thermltake_T678-GA">
-                <p>Thermltake T678-GA ATX<br> Precio $15.390,00</p>
+                <p>Thermltake T678-GA ATX. Precio $15.390,00</p>
             </div>
             <div class="cathard wow animate__animated animate__fadeIn">
                 <p>Placa de video</p>
                 <img src="../media/articulos/vga3090.png" width="200px" alt="placa_de_video_GF3060">
-                <p>GEFORCE RTX3090 24GB MSI<br> Precio $642.515,00</p>
+                <p>GEFORCE RTX3090 24GB MSI. Precio $642.515,00</p>
             </div>
             <div class="cathard wow animate__animated animate__fadeIn">
                 <p>Teclado</p>
                 <img src="../media/articulos/teclado_sentey.png" width="200px" alt="teclado_sentey_869">
-                <p>SENTEY GTX 869 MECANICO ESP<br> Precio $7.990,00</p>
+                <p>SENTEY GTX 869 MECANICO ESP. Precio $7.990,00</p>
             </div>
             <div class="cathard wow animate__animated animate__fadeIn">
                 <p>Notebook</p>
                 <img src="../media/articulos/notebook_bangho.png" width="200px" alt="notebook_dell inspirion_1543">
-                <p>DELL INSPIRON 1543 INTEL I5<br> Precio $135.210,00</p>
+                <p>DELL INSPIRON 1543 INTEL I5. Precio $135.210,00</p>
             </div>
             <div class="cathard wow animate__animated animate__fadeIn">
                 <p>Microprocesador</p>
                 <img src="../media/articulos/micro_ryzen5.png" width="200px" alt="microprocesador_Ryzen5">
-                <p>AMD RYZEN 5 5600G <br> Precio $41.690,00</p>
+                <p>AMD RYZEN 5 5600G. Precio $41.690,00</p>
             </div>
             <div class="cathard catgamer wow animate__animated animate__fadeIn">
                 <p>Placa de video</p>
                 <img src="../media/articulos/vga3060.png" width="200px" alt="placa_de_video_GF3060de video RTX3060">
-                <p>GEFORCE RTX3060 20GB MSI<br> Precio $642.515,00</p>
+                <p>GEFORCE RTX3060 20GB MSI. Precio $642.515,00</p>
             </div>
             <div class="cathard wow animate__animated animate__fadeIn">
                 <p>Motherboard</p>
                 <img src="../media/articulos/Mother_MSI.png" width="200px" alt="Motherboard_MSI_B450">
-                <p>MOTHER MSI B450M <br> PRO-VDH MAX SAM4 B450 <br> Precio $9.891,00</p>
+                <p>MOTHER MSI B450M. PRO-VDH MAX SAM4 B450 . Precio $9.891,00</p>
             </div>
             <div class="cathard catgamer wow animate__animated animate__fadeIn">
                 <p>Auriculares </p>
                 <img src="../media/articulos/auricular_hyperx.png" width="200px" alt="auricular_hyperx">
-                <p>HYPERX <br>CLOUD FLIGHT WIRELESS <br> Precio $13.290,00</p>
+                <p>HYPERX .CLOUD FLIGHT WIRELESS. Precio $13.290,00</p>
             </div>
             <div class="cathard catgamer wow animate__animated animate__fadeIn">
                 <p>Webcam </p>
                 <img src="../media/articulos/webcam_solarmax.png" width="200px" alt="webcam_solarmax">
-                <p>SOLARMAX ZOOMY <br> FULL HD 1080p<br> Precio $1.899,00</p>
+                <p>SOLARMAX ZOOMY . FULL HD 1080p. Precio $1.899,00</p>
             </div>
             <div class="cathard wow animate__animated animate__fadeIn">
                 <p>Disco sólido M.2 </p>
                 <img src="../media/articulos/ssd_adata_M2.png" width="200px" alt="ssd_adata_M2">
-                <p>2TB M.2 NVME ADATA XPG <br> Precio $38.463,00</p>
+                <p>2TB M.2 NVME ADATA XPG. Precio $38.463,00</p>
             </div>
             <div class="cathard wow animate__animated animate__fadeIn">
                 <p>Placa de video</p>
                 <img src="../media/articulos/vga1050.png" width="200px" alt="placa_de_video_GTX1050">
-                <p>MSI GEFORCE GTX 1050TI X 4GB <br> Precio $49.950,00</p>
+                <p>MSI GEFORCE GTX 1050TI X 4GB. Precio $49.950,00</p>
             </div>
             <div class="cathard wow animate__animated animate__fadeIn">
                 <p>Teclado</p>
                 <img src="../media/articulos/teclado_sentey.png" width="200px" alt="teclado_sentey_865">
-                <p>SENTEY GTX 865 MECANICO ESP<br> Precio $5.990,00</p>
+                <p>SENTEY GTX 865 MECANICO ESP. Precio $5.990,00</p>
             </div>
             <div class="cathard wow animate__animated animate__fadeIn">
                 <p>Gabinete</p>
                 <img src="../media/articulos/gabinete_blanco.png" width="200px" alt="gabinete_thermaltake_blanco">
-                <p>GAMER HB-037 ATX TG<br> Precio $9.290,00</p>
+                <p>GAMER HB-037 ATX TG. Precio $9.290,00</p>
             </div>
             <div class="cathard wow animate__animated animate__fadeIn">
                 <p>Placa de video</p>
                 <img src="../media/articulos/vga1050.png" width="200px" alt="placa_de_video_RTX1050">
-                <p>COLORFULL RTX1050 12GB <br> Precio $53.790,00</p>
+                <p>COLORFULL RTX1050 12GB. Precio $53.790,00</p>
             </div>
             <div class="cathard wow animate__animated animate__fadeIn">
                 <p>Disco</p>
                 <img src="../media/articulos/ssd_M2_WDigital.png" width="200px" alt="ssd_M2_WDigital">
-                <p>W. DIGITAL SSD M.2 1TB<br> Precio $15.500,00</p>
+                <p>W. DIGITAL SSD M.2 1TB. Precio $15.500,00</p>
             </div>
             <div class="cathard wow animate__animated animate__fadeIn">
                 <p>Placa de video</p>
                 <img src="../media/articulos/vga2060.png" width="200px" alt="placa_de_video_RTX2060">
-                <p>ASUS RTX2060 18GB DDR5<br> Precio $113.000,00</p>
+                <p>ASUS RTX2060 18GB DDR5. Precio $113.000,00</p>
             </div>
 
         </div>
     </main>
     <footer class="container-fluid">
         <div class="dire">
-            <h6>&copy Todos los derechos reservados por JLG 2021 <br> en el curso de "Desarrollo Wed" de CoderHouse</h6>
-            🏢 Av. Triunvirato 4142 Piso 16 dto. 2ºB <br> 📞 Teléfono 5478-6226 <br> 📨contacto@codigowg.com.ar
-            <br>
+            <h6>&copy Todos los derechos reservados por </h6>
+            <h6> JLG 2021 en el curso de "Desarrollo Wed" de CoderHouse</h6>
+            <p>🏢 Av. Triunvirato 4142 Piso 16 dto. 2ºB</p>
+            <p>📞 Teléfono 5478-6226 </p> 
+            <p>📨contacto@codigowg.com.ar</p>
         </div>
         <div class="footer__marca mt-3">
             <img class="logo " src="../media/logo.jpg" alt="Logo">
             <h1 id="top">codigo>_WG </h1>
             <h2 class="eslogan">for work and gaming</h2>
         </div>
-        <section class="redes">
+        <div class="redes">
             <div>
                 <a href="https://www.instagram.com/?hl=es-la " target="_blank"><img src="../media/redes/instagram.png" whidth="32px" alt="instagram"></a>
             </div>
@@ -241,7 +243,7 @@
             <div>
                 <a href="https://www.whatsapp.com/" target="_blank"><img src="../media/redes/whatsapp.png" whidth="32px" alt="whatsapp"></a>
             </div>
-        </section>
+        </div>
         <a href="#top">Ir al inicio</a>
         </div>
     </footer>
