--- a/pages/software.html
+++ b/pages/software.html
@@ -30,10 +30,10 @@
     <header>
         <div class="marca">
             <img class="logo" src="../media/logo.jpg" alt="Logo">
-            <h1 id="top">codigo>_WG </h1>
+            <h1 id="top">C0D1G0>_WG</h1>
         </div>
         <h3 class="eslogan animate__animated animate__pulse">for work and gaming</h3>
-        <section class="redes">
+        <div class="redes">
             <div>
                 <a href="https://www.instagram.com/?hl=es-la " target="_blank"><img src="../media/redes/instagram.png" whidth="32px" alt="instagram"></a>
             </div>
@@ -46,7 +46,7 @@
             <div>
                 <a href="https://www.whatsapp.com/" target="_blank"><img src="../media/redes/whatsapp.png" whidth="32px" alt="whatsapp"></a>
             </div>
-        </section>
+        </div>
     </header>
     <!-- carrusel de bootstrap-->
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -104,7 +104,7 @@
                         <a class="nav-link active text-white" aria-current="page" href="../pages/gaming.html">Gaming</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="../pages/contacto.html" target="_blank">Contactenos</a>
+                        <a class="nav-link text-white" href="../pages/contacto.html">Contactenos</a>
                     </li>
                 </ul>
                 <form class="d-flex">
@@ -138,13 +138,6 @@
     <h2 class="separador">Programas, aplicaciones y juegos</h2>
     <div class="articulos software">
         <div class="catsoft catgamer wow animate__animated animate__fadeIn">
-            <img src="../media/articulos/soft_call_of_duty.jpg" width="200px" alt="Call of Duty®: Vanguard">
-            <div>
-                <h3>Call of Duty®: Vanguard = $12.300.-</h3>
-                <p> Se requiere PS Plus para jugar online - Compras dentro del juego opcionales - Admite hasta 48 jugadores online que tengan PS Plus - Juego online opcional 1-2 jugadores - Mejorado para PS4 Pro - Vibración del control DUALSHOCK 4</p>
-            </div>
-        </div>
-        <div class="catsoft catgamer wow animate__animated animate__fadeIn">
             <img src="../media/articulos/soft_ghost.jpg" width="200px" alt="Ghost of Tsushima Bonus Content">
             <div>
                 <h3>Ghost of Tsushima Bonus Content = $13.600.-</h3>
@@ -152,11 +145,18 @@
             </div>
         </div>
         <div class="catsoft catgamer wow animate__animated animate__fadeIn">
+            <img src="../media/articulos/soft_call_of_duty.jpg" width="200px" alt="Call of Duty®: Vanguard">
+            <div>
+                <h3>Call of Duty®: Vanguard = $12.300.-</h3>
+                <p> Se requiere PS Plus para jugar online - Compras dentro del juego opcionales - Admite hasta 48 jugadores online que tengan PS Plus - Juego online opcional 1-2 jugadores - Mejorado para PS4 Pro - Vibración del control DUALSHOCK 4</p>
+            </div>
+        </div>
+        <div class="catsoft catgamer wow animate__animated animate__fadeIn">
             <img src="../media/articulos/soft_horizon.jpg" width="200px" alt="Horizon Zero Dawn: Complete Edition">
             <div>
                 <h3>Horizon Zero Dawn: Complete Edition = $11.000.- </h3>
                 <p> Vive la aventura completa de Horizon Zero Dawn. Conviértete en la habilidosa cazadora Aloy y explora un mundo exuberante habitado por misteriosas criaturas mecanizadas, en un nuevo y emocionante juego de rol, acción y mundo abierto, exclusivamente
-                    para la consola PlayStation®4./p></p>
+                    para la consola PlayStation®4.</p>
             </div>
         </div>
         <div class="catsoft catgamer wow animate__animated animate__fadeIn">
@@ -172,8 +172,7 @@
             <div>
                 <h3>Microsoft Visual Studio Enterprise 2019 (PC & Mac) </h3>
                 <p>Tipo de licencia: de por vida para 1 PC | Funciona en sistemas de 32 y 64 bitsLa clave del producto y las instrucciones de instalación se envían por correo electrónico después de la compra. Idiomas: español, inglés, francés, alemán, italiano,
-                    polaco, checo, portugués (Brasil), ruso, turco, chino (simplificado), chino (tradicional), japonés, coreano. Visual Studio 2019 es una solución completa e integrada con herramientas de desarrollo, servicios en la nube y extensionesque
-                    le permiten a usted y a su equipo crear aplicaciones y juegos increíbles para computadoras de escritorio, Internet, Windows Store, Android e iOS.</p>
+                    polaco, checo, portugués (Brasil), ruso, turco, chino (simplificado), chino (tradicional), japonés, coreano. Visual Studio 2019 es una solución completa e integrada con herramientas de desarrollo y servicios en la nube.</p>
             </div>
         </div>
         <div class="catsoft wow animate__animated animate__fadeIn">
@@ -189,23 +188,24 @@
             <div>
                 <h3>Microsoft Windows Server 2016 Standard 16 core = $ 13.200.-</h3>
                 <p>Se requiere un mínimo de 8 licencias de núcleo para cada procesador físico y un mínimo de 16 licencias de núcleo para cada servidor. Por lo tanto, esta licencia puede activar hasta 2 procesadores físicos. Standard Edition proporciona derechos
-                    para hasta 2 entornos de sistema operativo o contenedores de servidores Windows con aislamiento de Hyper-V cuando todos los núcleos físicos del servidor tienen licencia. Por cada 1 o 2 VM adicionales, todos los núcleos físicos en el
-                    servidor deben tener licencia nuevamente.</p>
+                    para hasta 2 entornos de sistema operativo o contenedores de servidores Windows con aislamiento de Hyper-V cuando todos los núcleos físicos del servidor tienen licencia. Por cada 1 o 2 VM adicionales, todos los núcleos físicos en el servidor deben tener licencia nuevamente.</p>
             </div>
         </div>
     </div>
     <footer class="container-fluid">
         <div class="dire">
-            <h6>&copy Todos los derechos reservados por JLG 2021 <br> en el curso de "Desarrollo Wed" de CoderHouse</h6>
-            🏢 Av. Triunvirato 4142 Piso 16 dto. 2ºB <br> 📞 Teléfono 5478-6226 <br> 📨contacto@codigowg.com.ar
-            <br>
+            <h6>&copy Todos los derechos reservados por </h6>
+            <h6> JLG 2021 en el curso de "Desarrollo Wed" de CoderHouse</h6>
+            <p>🏢 Av. Triunvirato 4142 Piso 16 dto. 2ºB</p>
+            <p>📞 Teléfono 5478-6226 </p> 
+            <p>📨contacto@codigowg.com.ar</p>
         </div>
-        <div class="footer__marca mt-3">
+        <div class="footer__marca">
             <img class="logo " src="../media/logo.jpg" alt="Logo">
             <h1 id="top">codigo>_WG </h1>
             <h2 class="eslogan">for work and gaming</h2>
         </div>
-        <section class="redes">
+        <div class="redes">
             <div>
                 <a href="https://www.instagram.com/?hl=es-la " target="_blank"><img src="../media/redes/instagram.png" whidth="32px" alt="instagram"></a>
             </div>
@@ -218,7 +218,7 @@
             <div>
                 <a href="https://www.whatsapp.com/" target="_blank"><img src="../media/redes/whatsapp.png" whidth="32px" alt="whatsapp"></a>
             </div>
-        </section>
+        </div>
         <a href="#top">Ir al inicio</a>
         </div>
     </footer>
