--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -30,10 +30,10 @@
     <header>
         <div class="marca">
             <img class="logo" src="../media/logo.jpg" alt="Logo">
-            <h1 id="top">codigo>_WG </h1>
+            <h1 id="top">C0D1G0>_WG</h1>
         </div>
         <h3 class="eslogan animate__animated animate__pulse">for work and gaming</h3>
-        <section class="redes">
+        <div class="redes">
             <div>
                 <a href="https://www.instagram.com/?hl=es-la " target="_blank"><img src="../media/redes/instagram.png" whidth="32px" alt="instagram"></a>
             </div>
@@ -46,7 +46,7 @@
             <div>
                 <a href="https://www.whatsapp.com/" target="_blank"><img src="../media/redes/whatsapp.png" whidth="32px" alt="whatsapp"></a>
             </div>
-        </section>
+        </div>
     </header>
     <!-- carrusel de bootstrap-->
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -104,7 +104,7 @@
                         <a class="nav-link active text-white" aria-current="page" href="../pages/gaming.html">Gaming</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="../pages/contacto.html" target="_blank">Contactenos</a>
+                        <a class="nav-link text-white" href="../pages/contacto.html">Contactenos</a>
                     </li>
                 </ul>
                 <form class="d-flex">
@@ -115,73 +115,72 @@
         </div>
     </nav>
     </nav>
-    <main class="direcMapa container-fluid">
-        <div class="row">
-            <form class="formulario col-5" action="">
-                <fieldset>
-                    <legend>FORMULARIO DE CONTACTO</legend>
-                    <br>
-                    <div>
-                        <label for="Name">*Nombre</label>
-                        <input type="text" name="Name" required>
-                    </div>
-                    <br>
-                    <div>
-                        <label for="Lastname">Apellido</label>
-                        <input type="text" name="Lastname">
-                    </div>
-                    <br>
-                    <div>
-                        <label for="mail">*E-Mail</label>
-                        <input type="text" name="Mail" required>
-                    </div>
-                    <br>
-                    <div>
-                        <label for="civil">Consulta por: </label>
-                        <input type="radio" value="Hardware" name="civil">Hardware
-                        <input type="radio" value="Software" name="civil">Software
-                        <input type="radio" value="otra" name="civil"> Otro
-                    </div>
-                    <br>
-                    <div>
-                        <label for="comentario">*Detallenos su consulta</label><br>
-                        <textarea name="coment" id="consulta" cols="74" rows="8" required></textarea>
-                        <div class="enviarForm">
-                            <input type="submit" value="Enviar">
-                            <input type="reset" value="Borrar">
-                        </div>
-                    </div>
-                    <br>
-                </fieldset>
-            </form>
-            <section class="ubicacion col-5">
+    <main class="direcMapa">
+        <form class="formulario" action="">
+            <fieldset>
+                <legend>FORMULARIO DE CONTACTO</legend>
+                <br>
                 <div>
-                    <ul>
-                        <li>🏢 Av. Triunvirato 4142</li>
-                        <li>Piso 16 dto. 2ºB</li>
-                        <li>📞 Teléfono 5478-6226</li>
-                        <li>📨contacto@codigowg.com.ar</li>
-                    </ul>
-                </div><br>
-                <div>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d821.2495717773394!2d-58.48013461184656!3d-34.57890989458077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb66ecfd29955%3A0xefb0ca9660a6098!2sAv%20Triunvirato%204142%2C%20C1431FBR%20CABA!5e0!3m2!1ses-419!2sar!4v1638411310088!5m2!1ses-419!2sar"
-                        width="500" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <label for="Name">*Nombre</label>
+                    <input type="text" name="Name" required>
                 </div>
-            </section>
-        </div>
+                <br>
+                <div>
+                    <label for="Lastname">Apellido</label>
+                    <input type="text" name="Lastname">
+                </div>
+                <br>
+                <div>
+                    <label for="mail">*E-Mail</label>
+                    <input type="text" name="Mail" required>
+                </div>
+                <br>
+                <div>
+                    <label for="civil">Consulta por: </label>
+                    <input type="radio" value="Hardware" name="civil">Hardware
+                    <input type="radio" value="Software" name="civil">Software
+                    <input type="radio" value="otra" name="civil"> Otro
+                </div>
+                <br>
+                <div>
+                    <label for="comentario">*Detallenos su consulta</label><br>
+                    <textarea name="coment" id="consulta" cols="55" rows="8" required></textarea>
+                    <div class="enviarForm">
+                        <input type="submit" value="Enviar">
+                        <input type="reset" value="Borrar">
+                    </div>
+                </div>
+                <br>
+            </fieldset>
+        </form>
+        <section class="ubicacion">
+            <div>
+                <ul>
+                    <li>🏢 Av. Triunvirato 4142</li>
+                    <li>Piso 16 dto. 2ºB</li>
+                    <li>📞 Teléfono 5478-6226</li>
+                    <li>📨contacto@codigowg.com.ar</li>
+                </ul>
+            </div><br>
+            <div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d821.2495717773394!2d-58.48013461184656!3d-34.57890989458077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb66ecfd29955%3A0xefb0ca9660a6098!2sAv%20Triunvirato%204142%2C%20C1431FBR%20CABA!5e0!3m2!1ses-419!2sar!4v1638411310088!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+        </section>
     </main>
     <footer class="container-fluid">
         <div class="dire">
-            <h6>&copy Todos los derechos reservados por JLG 2021 <br> en el curso de "Desarrollo Wed" de CoderHouse</h6>
-            🏢 Av. Triunvirato 4142 Piso 16 dto. 2ºB <br> 📞 Teléfono 5478-6226 <br> 📨contacto@codigowg.com.ar
-            <br>
+            <h6>&copy Todos los derechos reservados por </h6>
+            <h6> JLG 2021 en el curso de "Desarrollo Wed" de CoderHouse</h6>
+            <p>🏢 Av. Triunvirato 4142 Piso 16 dto. 2ºB</p>
+            <p>📞 Teléfono 5478-6226 </p> 
+            <p>📨contacto@codigowg.com.ar</p>
         </div>
         <div class="footer__marca mt-3">
             <img class="logo " src="../media/logo.jpg" alt="Logo">
             <h1 id="top">codigo>_WG </h1>
             <h2 class="eslogan">for work and gaming</h2>
         </div>
-        <section class="redes">
+        <div class="redes">
             <div>
                 <a href="https://www.instagram.com/?hl=es-la " target="_blank"><img src="../media/redes/instagram.png" whidth="32px" alt="instagram"></a>
             </div>
@@ -194,7 +193,7 @@
             <div>
                 <a href="https://www.whatsapp.com/" target="_blank"><img src="../media/redes/whatsapp.png" whidth="32px" alt="whatsapp"></a>
             </div>
-        </section>
+        </div>
         <a href="#top">Ir al inicio</a>
         </div>
     </footer>
