--- a/pages/gaming.html
+++ b/pages/gaming.html
@@ -30,10 +30,10 @@
     <header>
         <div class="marca">
             <img class="logo" src="../media/logo.jpg" alt="Logo">
-            <h1 id="top">codigo>_WG </h1>
+            <h1 id="top">C0D1G0>_WG</h1>
         </div>
         <h3 class="eslogan animate__animated animate__pulse">for work and gaming</h3>
-        <section class="redes">
+        <div class="redes">
             <div>
                 <a href="https://www.instagram.com/?hl=es-la " target="_blank"><img src="../media/redes/instagram.png" whidth="32px" alt="instagram"></a>
             </div>
@@ -46,7 +46,7 @@
             <div>
                 <a href="https://www.whatsapp.com/" target="_blank"><img src="../media/redes/whatsapp.png" whidth="32px" alt="whatsapp"></a>
             </div>
-        </section>
+        </div>
     </header>
     <!-- carrusel de bootstrap-->
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -104,7 +104,7 @@
                         <a class="nav-link active text-white" aria-current="page" href="../pages/gaming.html">Gaming</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="../pages/contacto.html" target="_blank">Contactenos</a>
+                        <a class="nav-link text-white" href="../pages/contacto.html">Contactenos</a>
                     </li>
                 </ul>
                 <form class="d-flex">
@@ -208,16 +208,18 @@
     </main>
     <footer class="container-fluid ">
         <div class="dire ">
-            <h6>&copy Todos los derechos reservados por JLG 2021 <br> en el curso de "Desarrollo Wed " de CoderHouse</h6>
-            🏢 Av. Triunvirato 4142 Piso 16 dto. 2ºB <br> 📞 Teléfono 5478-6226 <br> 📨contacto@codigowg.com.ar
-            <br>
+            <h6>&copy Todos los derechos reservados por </h6>
+            <h6> JLG 2021 en el curso de "Desarrollo Wed" de CoderHouse</h6>
+            <p>🏢 Av. Triunvirato 4142 Piso 16 dto. 2ºB</p>
+            <p>📞 Teléfono 5478-6226 </p> 
+            <p>📨contacto@codigowg.com.ar</p>
         </div>
         <div class="footer__marca mt-3 ">
             <img class="logo " src="../media/logo.jpg " alt="Logo ">
             <h1 id="top ">codigo>_WG </h1>
             <h2 class="eslogan ">for work and gaming</h2>
         </div>
-        <section class="redes ">
+        <div class="redes ">
             <div>
                 <a href="https://www.instagram.com/?hl=es-la " target="_blank "><img src="../media/redes/instagram.png " whidth="32px " alt="instagram "></a>
             </div>
@@ -230,7 +232,7 @@
             <div>
                 <a href="https://www.whatsapp.com/ " target="_blank "><img src="../media/redes/whatsapp.png " whidth="32px " alt="whatsapp "></a>
             </div>
-        </section>
+        </div>
         <a href="#top ">Ir al inicio</a>
         </div>
     </footer>
